# triggon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_JP.md  pyproject.toml
src/triggon/: __init__.py  api.py  api.pyi
src/triggon.egg-info/: PKG-INFO  SOURCES.txt
src/triggon/_internal/: keys.py  label.py  lock.py  rollback_ast.py  validators.py
src/triggon/_internal/_types/: aliases.py
src/triggon/_internal/debug/: logger.py  setup.py
src/triggon/core/: flag_switch.py  value_resolver.py
src/triggon/errors/: public.py
src/triggon/trigfunc/: _core.py  trigfunc.py
tests/: test_debug.py  test_early_return.py  test_flags.py  test_initialization.py  test_registration.py  test_rollback.py  test_rollback_ast.py  test_trigfunc.py  test_trigger_call.py  test_update_values.py
triggon/: __init__.py  _debug.py  _var_analysis.py  _var_update.py  api.py  api.pyi  trig_func.py  triggon.py  triggon.pyi
triggon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
triggon/_internal/: __init__.py  _frame_utils.py  _methods.py  _revert.py  _set_trigger.py  _switch_var.py  _value_resolver.py  _var_analysis.py  _var_update.py  debug.py  frames.py  keys.py  label.py  log_setup.py  mixins.py  rollback_ast.py  sentinel.py  switch_var.py  utils.py  validators.py
triggon/_internal/_types/: aliases.py  structs.py
triggon/_internal/debug/: logger.py  setup.py
triggon/core/: __init__.py  flag_switch.py  label_flag_switch.py  mixins.py  value_resolver.py  value_update.py
triggon/core/refs/: lookup.py  registry.py
triggon/errors/: public.py
triggon/trigfunc/: __init__.py  _core.py  trigfunc.py
triggon/typing/: triggon.pyi
