[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triggon"
version = "1.0.1"
description = "Dynamically switches values and functions at labeled trigger points, with support for early returns and function calls."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13" 
license = {file = "LICENSE"}
keywords = [
  "python", 
  "python-Libraries", 
  "triggon"
  "automation", 
  "dynamic-switching", 
  "delayed-execution",
  "early-return", 
  "lightweight"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

authors = [
  { name = "Tsuruko", email = "tsuruko-12@outlook.com" }
]
maintainers = [
  { name = "Tsuruko", email = "tsuruko-12@outlook.com" }
]

[project.urls]
Homepage = "https://github.com/tsuruko12/triggon"
Source = "https://github.com/tsuruko12/triggon"
"Bug Tracker" = "https://github.com/tsuruko12/triggon/issues"
"Changelog" = "https://github.com/tsuruko12/triggon/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"triggon" = ["py.typed", "*.pyi"]