[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triggon"
version = "2.0.0"
description = "A label-based trigger library for dynamic value switching, deferred calls, and early returns."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = [
  "python", 
  "triggon",
  "trigger",
  "label-based",
  "dynamic-switching", 
  "delayed-execution",
  "early-return", 
  "runtime-control",
  "lightweight",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

authors = [
  { name = "Tsuruko", email = "tsuruko-12@outlook.com" }
]
maintainers = [
  { name = "Tsuruko", email = "tsuruko-12@outlook.com" }
]

[project.urls]
Homepage = "https://github.com/tsuruko12/triggon"
Source = "https://github.com/tsuruko12/triggon"
"Bug Tracker" = "https://github.com/tsuruko12/triggon/issues"
"Changelog" = "https://github.com/tsuruko12/triggon/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"triggon" = ["py.typed", "*.pyi"]

[tool.ruff]
target-version = "py312"
line-length = 100
