[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triggon"
version = "2.0.0"
description = "A label-based trigger library for value switching, deferred calls, early returns, and rollback."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "trigger",
  "label-switching",
  "value-switching",
  "deferred-execution",
  "early-return",
  "rollback",
  "conditional-execution",
  "runtime-switching",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

authors = [
  { name = "Tsuruko", email = "tsuruko-12@outlook.com" }
]
maintainers = [
  { name = "Tsuruko", email = "tsuruko-12@outlook.com" }
]

[project.urls]
Homepage = "https://github.com/tsuruko12/triggon"
Source = "https://github.com/tsuruko12/triggon"
"Bug Tracker" = "https://github.com/tsuruko12/triggon/issues"
"Changelog" = "https://github.com/tsuruko12/triggon/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["triggon*"]
namespaces = true

[tool.setuptools.package-data]
"triggon" = ["py.typed", "*.pyi"]

[tool.ruff]
target-version = "py312"
line-length = 100
